Indicator contrast fix

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,10 @@ div u.via {
   width: clamp(18rem, 75%, 1200px);
   border-radius: 40% 60% 30% 70% / 50% 60% 40% 50%;
   overflow: hidden;
+  transition: all 300ms ease-in-out;
+}
+#interests #interestsCarousel:hover {
+  border-radius: 60% 40% 40% 60% / 60% 50% 50% 40%;
 }
 #interests #interestsCarousel .carousel-indicators {
   margin-right: 10%;
@@ -127,6 +131,7 @@ div u.via {
   width: 1rem;
   height: 0.75rem;
   border-radius: 50%;
+  filter: drop-shadow(1px 1px 0.5px rgb(0 0 0 /0.8));
 }
 
 .browserModal {
